# src/features/members/dto/classification.enum.ts
@@ -1,0 +1,6 @@
+export enum MemberClassification {
+  NONE = 'NONE',
+  BASIC = 'BASIC',
+  SPECIAL = 'SPECIAL',
+  PREMIUM = 'PREMIUM',
+}
