# src/features/members/dto/index.ts
@@ -5,3 +5,4 @@ export * from './member-response.dto';
 export * from './change-member-status.dto';
 export * from './activate-member.dto';
 export * from './create-member-account.dto';
+export * from './classification.enum';
